[package]
name = "cpp-parser"
version = "0.0.1"
authors = ["calixteman <calixte.denizet@gmail.com>"]
edition = "2018"

[dependencies]
phf = { version = "0.8", features = ["macros"] }
bitflags = "1.2"
termcolor = "1.0"
hashbrown = "0.7"
same-file = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempdir = "0.3"
pretty_assertions = "0.6"